--- a/pom.xml
+++ b/pom.xml
@@ -21,26 +21,32 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.10.0</version>
         <configuration>
-          <source>8</source>
-          <target>8</target>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
+
         <configuration>
           <parallel>methods</parallel>
           <threadCount>4</threadCount>
           <perCoreThreadCount>false</perCoreThreadCount>
           <testFailureIgnore>true</testFailureIgnore>
+
           <includes>
-            <include>**/CukesRunner*.java</include>
+            <include>**/TestRunner.java</include>
           </includes>
+          <testFailureIgnore>true</testFailureIgnore>
         </configuration>
+
       </plugin>
+
       <plugin>
         <groupId>net.masterthought</groupId>
         <artifactId>maven-cucumber-reporting</artifactId>
@@ -64,11 +70,11 @@
                 <!-- supports wildcard or name pattern -->
                 <param>**/*.json</param>
               </jsonFiles>
-
             </configuration>
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 
